--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,5 +23,10 @@
         <item name="android:statusBarColor">@color/purple_700</item>
         <item name="android:navigationBarColor">@color/purple_700</item>
     </style>
+  <!-- Base application theme. -->
+    <style name="Base.Theme.QuizMaster" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 
 </resources>
